<resources>
    <string name="app_name">AnimalHelp</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- related to login/auth -->
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Re-enter Password</string>
    <string name="next">Next</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="logged_in">Logged In</string>

    <!-- disclaimer -->
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>

    <!-- related to profile -->
    <string name="verified_email">Email is verified.</string>
    <string name="not_verified_email">Email is not verified.
        Some features may be unavailable.</string>
    <string name="username_text">Username: %1$s</string>
    <string name="email_text">Email: %1$s</string>
    <string name="saved_message">Saved Messages</string>
    <string name="log_out">Log Out</string>
    <string name="logged_out">Logged Out</string>
    <string name="go_chat">Chat</string>

    <!-- settings -->
    <string name="settings">Settings</string>
    <string name="change_username">Change Username</string>
    <string name="phone_numbers">Phone numbers</string>
    <string name="counsellor">Counsellor</string>
    <string name="change_password">Change password</string>
    <string name="current_password">Current Password</string>
    <string name="change_medication">Change medication</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- related to chat/message -->
    <string name="send_button">Send</string>
    <string name="message_hint">Write message here</string>

    <!-- related to connecting to database -->
    <string name="connection_error">Failed to connect to database!</string>

    <!-- related to category choosing -->
    <string name="age_spinner_text">Choose an age group</string>
    <string name="content_spinner_text">Choose what you want to chat about</string>
    <string name="language_spinner_text">Choose your language</string>
    <string name="find_user">Find user</string>
    <string name="age_prompt">Age groups</string>
    <string name="content_prompt">Content</string>

    <!-- related to accepting chat requests -->
    <string name="accept_request">Accept</string>
    <string name="deny_request">Deny</string>

    <!-- Activity titles -->
    <string name="title_activity_auth">Welcome Back</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_connect">Find A User</string>
    <string name="title_activity_chat">Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
